--- a/requirements.txt
+++ b/requirements.txt
@@ -26,9 +26,14 @@ django-flat-responsive==1.4.1
 django-flat-theme==1.1.4
 django-progressive-web-app==0.1
 django-report-builder==3.5.0
+django-storages==1.6.5
 djangorestframework==3.6.3
+dlib==19.4.0
 docutils==0.14
+dropbox==8.4.1
 et-xmlfile==1.0.1
+face-recognition==0.2.2
+face-recognition-models==0.1.3
 gunicorn==19.6.0
 h5py==2.7.0
 html5lib==0.999999999
